# health-food

./: .gitignore  README.md  requirements.txt
app/: db.py  (+5 more)
health-food/: .gitignore  README.md  data.db.old  pyproject.toml  requirements.txt
health-food/app/: db.py  main.py  recipe_utils.py  restaurants.py  rules.py
health-food/app/auth/: crud.py  dependencies.py  router.py  schemas.py  security.py
health-food/app/llm_provider/: base.py  openai_provider.py
health-food/app/recipes/: crud.py  dependencies.py  router.py  schemas.py
health-food/app/repositories/: biomarker_repository.py  recipe_repository.py  restaurant_repository.py
health-food/app/services/: ai_service.py  biomarker_service.py  recipe_service.py  restaurant_service.py
health-food/frontend/: .env.example  index.html  package.json  vite.config.ts
health-food/frontend/src/: App.tsx  main.tsx  styles.css
health-food/frontend/src/api/: index.ts  types.ts
health-food/frontend/src/components/Auth/: AuthPage.tsx  LoginForm.tsx  RegisterForm.tsx
health-food/frontend/src/components/Biomarkers/: BiomarkerItem.tsx  BiomarkersGrid.tsx
health-food/frontend/src/components/Generator/: AICard.tsx  AIPhotoModal.tsx  MyRecipesModal.tsx  RecipeGenerator.tsx
health-food/frontend/src/components/Layout/: Header.tsx  Tabs.tsx
health-food/frontend/src/components/Planner/: MealPlanner.tsx  MealSlot.tsx  PlannerTab.tsx
health-food/frontend/src/components/Profile/: ProfileTab.tsx
health-food/frontend/src/constants/: biomarkers.ts
health-food/frontend/src/store/: hooks.ts  index.ts  localStorage.ts
(+27 files in other folders)
